# Mindthus

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMERCIAL-LICENSE.md  README.md  pyproject.toml
.codex/: INSTALL.md
data/: README.md
docs/: guide.md  real-use-validation.md
ppt/: index.html
scripts/: build-release-pack.py  install-skills.sh  log-fidelity-usage.py  log-mindthus-runtime.py  mindthus_beta2_telemetry.py  mindthus_cli.py  router-wakeup-ab.py  run-fidelity-judge.py  run-judgment-benchmark-cli.py
skills/: runtime_bootstrap.py
tests/: anti_spiral_pressure_tests.md  brake_dev_cases.jsonl  brake_loaded_action_v01_anchor_cases.jsonl  brake_semantic_triage_dev_cases.jsonl  brake_semantic_triage_v02_calibration_cases.jsonl  brake_semantic_triage_v04_expansion_cases.jsonl  judgment_benchmark_50_cases.jsonl  method_fidelity_v0_9_acceptance_2026-06-08.md  method_fidelity_v1_0_readiness_2026-06-08.md  mindthus_judgment_kernel_acceptance_run_2026-05-26.md  mindthus_router_pressure_tests.md  mindthus_v0_6_version_acceptance_2026-05-26.md  multi_role_ab_pressure_tests.md  multi_role_ab_run_2026-05-23.md  primitive_activation_ab_behavior_tests.md  primitive_activation_live_rerun_2026_06_14.md  router_wakeup_ab_experiment_design.md  router_wakeup_ab_scores.fixture.jsonl  router_wakeup_weak_cue_calibration_2026-06-17.md  router_wakeup_weak_cue_holdout_cases.md  test_activation_benchmark.py  test_anti_spiral_pressure_contract.py  test_before_after_case_pages.py  test_beta_2_0_arm_manifests.py  test_beta_2_0_case_matrix.py  test_beta_2_0_codex_dry_run.py  (+75 more)
(+26227 files in other folders)
