[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindthus"
version = "1.3.0"
description = "Mindthus cognitive judgment skills and runtime pack"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0-or-commercial"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
mindthus = "scripts.mindthus_cli:main"
